fix bug with invisible nav buttons

--- a/src/components/TopNav/TopNav.scss
+++ b/src/components/TopNav/TopNav.scss
@@ -29,6 +29,7 @@ nav.navbar {
     @media screen and (max-width: 1023px) {
       box-shadow: 0 16px 15px rgba(10, 10, 10, 0.1);
       opacity: 0;
+      visibility: hidden;
       display: block;
       position: absolute;
       width: 100%;
@@ -37,6 +38,7 @@ nav.navbar {
 
       &.is-active {
         opacity: 1;
+        visibility: visible;
       }
     }
   }
